--- a/src/06_ametop_2nd_draft.Rmd
+++ b/src/06_ametop_2nd_draft.Rmd
@@ -42,11 +42,11 @@ Yimin You
 
 # Summary
 
-This study aims to improve pain management for pediatric patients undergoing intravenous (IV) insertion, a common yet distressing medical procedure. We investigate the efficacy of two treatments: Ametop gel as a standalone treatment and the combination of Ametop and vapocoolant spray. A randomized controlled experiment was conducted to assess the pain levels of pediatric patients during IV insertions after receiving either Ametop gel alone or a combination of Ametop gel and vapocoolant spray. A two-sample t-test was used to compare changes in pain levels between the two treatment groups, and a linear regression was performed to examine the association between age and pain level. The results of the two-sample t-test indicated that the addition of vapocoolant spray significantly reduced the discomfort of IV insertions in pediatric patients. Moreover, the regression analysis revealed that younger children experienced more pain. The number of IV attempts and side effects were also evaluated, and the findings showed that adding vapocoolant spray did not increase the number of IV attempts. Overall, the results suggest that the combination of Ametop and vapocoolant spray is more effective than Ametop alone, particularly for younger children.
+This study aims to improve pain management for pediatric patients during intravenous (IV) insertions, a common yet distressing procedure. We investigated the effectiveness of two treatments: Ametop gel as a standalone treatment and the combination of Ametop and vapocoolant spray. A randomized controlled experiment was conducted to assess the pain levels of pediatric patients during IV insertions after receiving either Ametop gel alone or a combination of Ametop gel and vapocoolant spray. A two-sample t-test was used to compare changes in pain levels between the two treatment groups, and a linear regression was performed to examine the association between age and pain level. The result of the two-sample t-test indicates that adding vapocoolant spray significantly reduced the discomfort of IV insertions in pediatric patients. Moreover, the regression analysis revealed that younger children experienced more pain. The number of IV attempts and side effects were also evaluated, and the findings showed that adding vapocoolant spray did not increase the number of IV attempts. Overall, the results suggest that the combination of Ametop and vapocoolant spray is more effective than Ametop alone, particularly for younger children.
 
 # Introduction 
 
-Intravenous (IV) insertion is an essential medical procedure that is frequently associated with discomfort and pain, particularly in pediatric patients. To mitigate this, BC Children's Hospital currently utilizes Ametop gel, a topical anesthetic that numbs the skin prior to needle insertion, to alleviate pain and ease the process. Despite its efficacy, Ametop gel alone may not suffice, especially in individuals with heightened sensitivity to pain. In pursuit of providing better medical care for pediatric patients, the hospital is considering the additional use of a vapocoolant spray. This spray acts rapidly to cool and numb the skin and is hypothesized to provide better pain relief during IV insertions. 
+Intravenous (IV) insertion is an essential medical procedure that is frequently associated with discomfort and pain, particularly in pediatric patients. To mitigate this, BC Children's Hospital currently utilizes Ametop gel, a topical anesthetic that numbs the skin prior to needle insertion, to alleviate pain and ease the process. Despite its efficacy, Ametop gel alone may not suffice, especially in individuals with heightened sensitivity to pain. To provide better medical care for pediatric patients, the hospital is considering the additional use of a vapocoolant spray. This spray acts rapidly to cool and numb the skin and is hypothesized to provide better pain relief during IV insertions. 
 
 To evaluate the effectiveness of adding a vapocoolant spray to Ametop gel, we formulated two research questions and conducted a corresponding statistical analysis. The questions are as follows:
 
@@ -57,11 +57,11 @@ To evaluate the effectiveness of adding a vapocoolant spray to Ametop gel, we fo
 Furthermore, we want to ensure that the use of vapocoolant spray does not increase the number of IV attempts and to assess the incidence of side effects among pediatric patients. The following sections detail the data description, statistical methods, and the results derived from our analysis.
 
 # Data description 
-The study retrospectively collected data from 240 pediatric patients undergoing intravenous (IV) insertion. Some participants withdrew from the study, citing reasons such as itchiness from Ametop and conversion to inhalation induction. Due to inadequate data on pain levels for these instances, it is not feasible to address the missing information with imputation techniques or other methods. Consequently, we excluded these 17 observations, focusing solely on the remaining 223 observations for main and secondary objective 1. The dataset has several key variables, categorized as follows:
+This study retrospectively collected data from 240 pediatric patients undergoing intravenous (IV) insertion. Some participants withdrew from the study for reasons such as itchiness from Ametop and conversion to inhalation induction. Due to inadequate data on pain levels for these instances, it was not feasible to address the missing information with imputation techniques or other methods. Consequently, we excluded these 17 observations, focusing solely on the remaining 223 observations for our research questions. The dataset has several key variables, categorized as follows:
 
-- **Patient Demographics:** This includes variables such as age, gender, and ASA classification, which are crucial for subgroup analyses. Age (5-16 years old) is particularly important for determining if responses to pain management strategies vary among different pediatric age groups.
-- **Randomization Groups:** Patients are randomly assigned to one of two groups: Group 1, receiving Ametop alone (the control group), and Group 2, receiving both Ametop and the vapocoolant spray (the study group). This randomization is essential for assessing the comparative effectiveness of the two treatment approaches.
-- **FPS-R Scores:** Patients’ pain level is rated using the FPS-R scale from 0 (no pain) to 10 (worst pain possible), offering a measurable discomfort level during IV insertion. This score determines the primary outcome, that is, the effectiveness of different treatment approaches.
+- **Patient Demographics:** This includes variables such as age, gender, and ASA classification, which are crucial for subgroup analysis. Age (5-16 years old) is particularly important for determining if responses to pain management strategies vary among different pediatric age groups.
+- **Randomization Groups:** Patients were randomly assigned to one of two groups: Group 1, receiving Ametop alone (the control group), and Group 2, receiving both Ametop and the vapocoolant spray (the study group). This randomization is essential for assessing the comparative effectiveness of the two treatment approaches.
+- **FPS-R Scores:** Patients’ pain levels were rated using the Faces Pain Scales-Revised scale from 0 (no pain) to 10 (worst pain possible), offering a measurable discomfort level during IV insertion. This score determines the primary outcome, that is, the effectiveness of different treatment approaches.
 - **Number of IV Attempts:** This variable represents the number of attempts needed for a successful IV insertion, reflecting the procedural difficulty and its potential correlation with patient discomfort.
 - **Side Effects:** Side effects, including the appearance of redness, sensations of itchiness, puffiness, or pain, were recorded to check if participants experienced any severe adverse reactions to the treatment.
 
@@ -69,13 +69,13 @@ Other than these variables, there were nine controlled variables, encompassing s
 
 # Methods
 
-In this analysis, we employ several statistical methods to address our research objectives. We utilize the Two-sample T-test to assess the primary objective: examining the difference in mean FPS-R scores between the control and study groups. For our first secondary objective, we perform a linear regression analysis to explore the relationship between age and randomization groups on FPS-R scores. To illustrate the second secondary objective, we present a bar graph depicting the number of IV attempts across the two groups. Lastly, we use a pie chart to display the distribution of side effects among all participants, addressing our third secondary objective.
+In this analysis, we employ several statistical methods to address our research objectives. We use a two-sample T-test to assess the primary objective of comparing the difference in mean FPS-R scores between the control and study groups. For our first secondary objective, we perform a linear regression analysis to explore the relationship between age and randomization groups on FPS-R scores. To illustrate the second secondary objective, we present a bar graph depicting the number of IV attempts across the two groups. Lastly, we use a pie chart to display the distribution of side effects among all participants, addressing our third secondary objective.
 
-**Main Objective: Does the combination of Ametop with a vapocoolant spray significantly reduce the discomfort experienced by pediatric patients during IV insertions, compared to using Ametop alone?**
+**Main Objective: Does the Combination of Ametop with a Vapocoolant Spray Significantly Reduce the Discomfort Experienced by Pediatric Patients During IV Insertions, Compared to Using Ametop Alone?**
 
-We begin with exploratory data analysis to examine the distribution of the target response variable, the FPS-R score. Figure 1 displays comparative boxplots for the control and study groups, illustrating the distribution of these FPS-R scores.
+We begin with exploratory data analysis to examine the distribution of the target response variable, the FPS-R scores. Figure 1 displays comparative boxplots for the control and study groups, illustrating the distribution of these FPS-R scores.
 
-```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.height=1.5, fig.align='center', fig.cap = "Boxplots of Control and Study Group for the Full Dataset"}
+```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.height=1.5, fig.align='center', fig.cap = "FPS-R Scores Boxplots of Control (Ametop) and Study (Ametop + Spray) Group"}
 # Read data
 file_path <- "../data/Ametop-PE data(new-Alex)(1control 2study).xlsx"
 original_data <- read_excel(file_path)
@@ -108,45 +108,51 @@ data <- select(data,
 
 # Boxplots
 plot1 <- data %>% filter(Randomization == 1) %>%
-  ggplot(aes(`FPS-R score`)) +
-  geom_boxplot() +
-  labs(title = "Control Group Boxplot")
+  ggplot(aes(`FPS-R score`, fill = "Control Group")) +
+  geom_boxplot(alpha = 0.7) +
+  labs(title = "Control Group FPS-R Scores Boxplot") +
+  scale_fill_manual(values = c("Control Group" = "#219ebc")) +
+  theme_minimal() +
+  theme(plot.title = element_text(hjust = 0.5, face = "bold"), legend.position = "none")
 
 plot2 <- data %>% filter(Randomization == 2) %>%
-  ggplot(aes(`FPS-R score`)) +
-  geom_boxplot() +
-  labs(title = "Study Group Boxplot")
+  ggplot(aes(`FPS-R score`, fill = "Study Group")) +
+  geom_boxplot(alpha = 0.7) +
+  labs(title = "Study Group FPS-R Scores Boxplot") +
+  scale_fill_manual(values = c("Study Group" = "#fb8500")) +
+  theme_minimal() +
+  theme(plot.title = element_text(hjust = 0.5, face = "bold"), legend.position = "none")
 
 grid.arrange(plot1, plot2, ncol = 2, nrow = 1)
 ```
 
 From Figure 1, we observe that the median FPS-R score for both the control and study groups is 2. The study group displays a higher concentration of scores at FPS-R scores 0 and 2, resulting in a right-skewed distribution, and FPS-R scores 6 and above are considered outliers.
 
-Welch Two Sample T-Test is used to assess whether the addition of vapocoolant spray reduces discomfort. This test is applied under the assumption that the differences between the mean of the control and study groups follow a Normal distribution. Although the dataset itself is not normally distributed, the sample size is large enough that, according to the Central Limit Theorem (CLT), we can still utilize the T-test. The null hypothesis asserts that the mean FPS-R scores for both groups are the same, while the alternative hypothesis is that the mean FPS-R score is lower for the study group that is using the vapocoolant spray. Consequently, we are employing a one-sided t-test and the significance threshold for the p-value is set at the 5% significance level.
+The two-sample T-Test is used to assess whether the addition of vapocoolant spray reduces discomfort. This test is applied under the assumption that the differences between the means of the control and study groups follow a Normal distribution. Although the dataset itself is not normally distributed, the sample size is large enough that, according to the Central Limit Theorem (CLT), we can still utilize the T-test. The null hypothesis asserts that the mean FPS-R scores for both groups are the same, while the alternative hypothesis is that the mean FPS-R score is lower for the study group that is using the vapocoolant spray. Consequently, we are employing a one-sided t-test and the significance threshold for the p-value is set at the 5% significance level.
 
-**Secondary Objective 1: The relationship between age and randomization (control and study) groups on FPS-R Scores.**
+**Secondary Objective 1: The Relationship between Age and Randomization (Control and Study) Groups on FPS-R Scores.**
 
-Regarding the second statistical question concerning the impact of age and randomization (study and control) groups on FPS-R Scores, we implement a linear regression analysis. This approach enables us to explore the relationship between age, randomization group, and the combined effect of both age and randomization group on the FPS-R Scores. In constructing our model, we ensure that the assumptions underlying linear regression are satisfied. These assumptions include linearity, independence, homoscedasticity, and normality of residuals. The statistical significance of the model coefficients is assessed with a p-value threshold of 5% significance level. 
+Regarding the second statistical question concerning the impact of age and randomization (study and control) groups on FPS-R scores, we implement a linear regression analysis. This approach enables us to explore the relationship between age, the randomization group, and the combined effect of both age and the randomization group on the FPS-R scores. In constructing our model, we ensure that the assumptions underlying linear regression are satisfied. These assumptions include linearity, independence, homoscedasticity, and normality of residuals. The statistical significance of the model coefficients is assessed with a p-value threshold of 5% significance level.
 
-**Secondary Objective 2: Does the combination of Ametop with a vapocoolant spray increase the number of IV insertion attempts, compared to the application of Ametop alone?**
+**Secondary Objective 2: Does the Combination of Ametop with a Vapocoolant Spray Increase the Number of IV Insertion Attempts, Compared to Using Ametop Alone?**
 
 To investigate whether the combination of Ametop with a vapocoolant spray increases the number of IV insertion attempts compared to the application of Ametop alone, we use summary statistics and visually analyze the data using plots. These help us understand the distribution and average number of IV attempts in both the control group (Ametop alone) and the study group (Ametop with vapocoolant spray).
 
-It's important to note that we choose not to conduct statistical tests for this comparison to avoid multiple tests on the same dataset. This can reduce the statistical power of the tests, and the probability of detecting a true effect of the study. When multiple tests are performed on the same dataset, the chances of finding significant results by chance increase, thereby reducing the confidence in the findings. Therefore, we rely on visual inspection of the data to draw preliminary conclusions about the impact of the combined treatment on the number of IV insertion attempts.
+We choose not to conduct statistical tests for this comparison to avoid multiple tests on the same dataset. This can reduce the statistical power of the tests and the probability of detecting the true effect of the study. When multiple tests are performed on the same dataset, the chances of finding significant results by chance increase, thereby reducing the confidence in the findings. Therefore, we rely on visual inspection of the data to draw preliminary conclusions about the impact of the combined treatment on the number of IV insertion attempts.
 
-**Secondary Objective 3: The incidence of side effects due to Ametop by pie chart and frequency table.**
+**Secondary Objective 3: The Incidence of Side Effects Due to Ametop by Pie Chart and Frequency Table.**
 
-We begin with exploratory data analysis and all 240 participants of the study. This includes those who withdrew prior to the study's completion, to account for patients who withdrew due to experiencing side effects, thereby preserving all incidence of side effects in the dataset.
+We begin with exploratory data analysis on all 240 participants of the study, including those who withdrew prior to the study's completion. This approach accounts for patients who withdrew due to experiencing side effects, thereby preserving all incidences of side effects in the dataset.
 
-Then, we categorize the observed side effects into four distinct groups: “Redness”, “Redness and Itching”, “Puffiness” and “Pain” to facilitate the quantitative analysis of side effects. We then present the findings in a pie chart and frequency table.
+We then categorize the observed side effects into four distinct groups: "Redness," "Redness and Itching," "Puffiness," and "Pain" to facilitate the quantitative analysis of side effects. We present the findings in a pie chart and frequency table.
 
 # Result
 
-In this section, we present the results of our data analysis. We analyzed the p-value to the significance level for the T-test. After we performed the linear regression on the response variable, we got the estimates and p-values. We then presented them in Table 1, Table 2, Figure 2, Figure 3 and Figure 4. 
+In this section, we present the results of our data analysis. We compared the p-value to the significance level for the two-sample T-Test. Then, we examined a linear regression model on the response variable, using their estimates and p-values. The results are presented in Table 1, Table 2, Figure 2, Figure 3 and Figure 4. 
 
-**Main Objective: Does the combination of Ametop with a vapocoolant spray significantly reduce the discomfort experienced by pediatric patients during IV insertions, compared to the application of Ametop alone?**
+**Main Objective: Does the Combination of Ametop with a Vapocoolant Spray Significantly Reduce the Discomfort Experienced by Pediatric Patients During IV Insertions, Compared to Using Ametop Alone?**
 
-For the main objective, we performed the Welch Two Sample T-Test on the two randomization groups and FPS-R scores. The results of the test including the group means, standard errors and the p-values are shown in Table 1 below.
+For the main objective, we performed a two-sample T-test on the two randomization (control and study) groups and FPS-R scores. The results of the test, including the group means, standard error, and p-value, are shown in Table 1 below.
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE}
 table_data <- data.frame(
@@ -160,11 +166,11 @@ table_data <- data.frame(
 kable(table_data, caption = "Control Group and Study Group Two-Sample T-Test", format = "markdown")
 ```
 
-The mean FPS-R Score for the group with Ametop alone is 2.6909, while the mean FPS-R Score for the group with the combination of Ametop and vapocoolant spray is 1.9292. The test yields a p-value of 0.02258, which is below the 5% significance threshold. This allows us to reject the null hypothesis at the 5% significance level, indicating a difference in the mean FPS-R scores between the control and study groups. These results support the hypothesis that adding vapocoolant spray may reduce discomfort in pediatric patients.
+The mean FPS-R score for the group with Ametop alone is 2.6909, while the mean FPS-R score for the group with the combination of Ametop and vapocoolant spray is 1.9292. The test yields a p-value of 0.02258, which is below the 5% significance threshold. This allows us to reject the null hypothesis at the 5% significance level, indicating a difference in the mean FPS-R scores between the control and study groups. These results support the hypothesis that adding vapocoolant spray may reduce discomfort in pediatric patients.
 
-**Secondary Objective 1: The relationship between age and randomization (study and control) groups on FPS-R Score**
+**Secondary Objective 1: The Relationship between Age and Randomization (Control and Study) Groups on FPS-R Scores.**
 
-For our second statistical question, we built a linear regression model on age, randomization group, and the combined effect of both age and randomization group to find their relationship on the FPS-R Score. The linear regression model served as our analytical tool, the results of which are shown in Table 2 below.
+For our second statistical question, we built a linear regression model on age, randomization group, and the combined effect of both age and randomization group to find their relationship with the FPS-R scores. The results of the linear regression model are shown in Table 2 below.
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE}
 regression_table <- data.frame(
@@ -178,11 +184,11 @@ regression_table <- data.frame(
 kable(regression_table, caption = "Linear Regression Model Output", format = "markdown")
 ```
 
-Our findings indicate that age is a significant factor in FPS-R Scores, as suggested by the p-value in Table 2. The model estimates that with each additional year of age, the FPS-R Scores decrease by an average of 0.164, suggesting that older children experience less pain during IV insertion.
+Our findings indicate that age is a significant factor in FPS-R scores, as suggested by the p-value in Table 2. The model estimates that with each additional year of age, the FPS-R scores decrease by an average of 0.164, suggesting that older children experience less pain during IV insertion.
 
-Although the estimates for the randomization group and the interaction between age and the randomization group did not reach the conventional levels of statistical significance, they still offer valuable insights. The model estimates that children in the study group, which involved the application of vapocoolant spray, are associated with a decrease of 1.6818 in the FPS-R Score. This matches our earlier findings in the main objective that implies that the use of vapocoolant spray is effective in reducing pain levels in IV insertions for children.
+Although the estimates for the randomization group and the interaction between age and the randomization group do not reach conventional levels of statistical significance, they still offer valuable insights. The model estimates that children in the study group, which involved the application of vapocoolant spray, are associated with a decrease of 1.6818 in the FPS-R scores. This matches our earlier findings in the main objective that imply that the use of vapocoolant spray is effective in reducing pain levels in IV insertions for children.
 
-From the estimates in Table 2, we create a linear regression model that represents the average FPS-R Scores among children according to their age and group allocation depicted in Figure 2.
+From the estimates in Table 2, we create a linear regression model that represents the average FPS-R scores among children according to their age and group allocation depicted in Figure 2.
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE, out.width="75%", fig.align='center', fig.cap='Linear Regression Model for Control and Study Group'}
 # Plot the linear regression line
@@ -198,9 +204,9 @@ ggplot(data, aes(x = Age, y = `FPS-R score`, color = factor(Randomization))) +
   theme(plot.title = element_text(hjust = 0.5, face = "bold"))
 ```
 
-Examining Figure 2, it is observed that As age increases, the difference of decrease in FPS-R score between the study and control group gets smaller. Notably, the two lines converge around the age of 15, suggesting that the efficacy of vapocoolant spray in reducing pain may not be as pronounced in children aged 15 and 16.
+Examining Figure 2, it is observed that as age increases, the difference in the decrease in FPS-R scores between the study and control groups gets smaller. Notably, the two lines converge around the age of 15, suggesting that the efficacy of vapocoolant spray in reducing pain may not be as pronounced in children aged 15 and 16.
 
-**Secondary Objective 2: Does the combination of Ametop with a vapocoolant spray increase the number of IV insertion attempts, compared to the application of Ametop alone?**
+**Secondary Objective 2: Does the Combination of Ametop with a Vapocoolant Spray Increase the Number of IV Insertion Attempts, Compared to Using Ametop Alone?**
 
 The figure below represents the number of IV insertion attempts in the control group compared to the study group with vapocoolant spray. 
 
@@ -221,13 +227,11 @@ bar <- data %>%
 print(bar)
 ```
 
-Upon examining Figure 3 the distribution of IV attempts, both groups exhibit comparable patterns, with the majority of instances in both groups having a single IV attempt. Quantitatively, the study group, with vapocoolant spray, shows an average of 1.08 IV attempts. This is marginally lower than the control group's average of 1.155 attempts, where only Ametop was applied. Such observations lead us to conclude that there is no increase in the number of IV attempts for the study group when the vapocoolant spray is added.
+Upon examining Figure 3, the distribution of IV attempts, both groups exhibit comparable patterns, with the majority of instances in both groups having a single IV attempt. Quantitatively, the study group, with vapocoolant spray, shows an average of 1.08 IV attempts. This is marginally lower than the control group's average of 1.155 attempts, where only Ametop was applied. Such observations lead us to conclude that there is no increase in the number of IV attempts for the study group when the vapocoolant spray is added.
 
 In summary, through the analysis of simple summary plots and calculation of mean attempts, it becomes evident that the introduction of the vapocoolant spray does not result in an elevated number of IV attempts when combined with Ametop. 
 
-**Secondary Objective 3: The incidence of side effects due to Ametop.**
-
-**Proportions of patients with or without observed side effects**
+**Secondary Objective 3: The Incidence of Side Effects Due to Ametop.**
 
 First, we want to know the proportions of patients experiencing side effects. Our findings indicate that there are 12 out of 240 patients from the dataset that experience side effects. This finding is shown in Figure 4 pie chart.
 
@@ -259,9 +263,7 @@ draw_pie_chart(side_effects_observed_summary, "Observed Side Effects")
 
 As illustrated in Figure 4, 95% of the patients experience no side effects, and 5% of patients experience side effects.
 
-**Type of Side Effects**
-
-Table 3 below shows how we categorize the side effects based on the description given in the dataset. 
+Then, we want to understand the type of side effects present. Table 3 below shows how we categorize the side effects based on the description given in the dataset. 
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE}
 side_effects_data <- data.frame(
@@ -314,15 +316,15 @@ As shown in Table 3 and Table 4, the most common side effect reported for patien
 
 # Conclusion
 
-The main objective which determines whether the addition of vapocoolant spray significantly reduces discomfort experienced by pediatric patients during IV insertions compared to Ametop alone. The result suggests that the addition of vapocoolant spray does significantly reduce the pain level felt by the participants. A limitation of 
+The primary objective was to determine whether the addition of a vapocoolant spray significantly reduces the discomfort experienced by pediatric patients during IV insertions compared to using Ametop alone. The results suggest that the addition of a vapocoolant spray does indeed significantly reduce the level of pain felt by the participants. A limitation of our study was the omission of observer scores. During data collection, observer scores were also recorded, where a nurse observed and rated the patients' discomfort on a 3-point scale: 'none,' 'slight,' or 'severe.' This rating aimed to capture visible signs of discomfort or pain, ensuring a reliable pain assessment in children who might be playful or might not fully understand the FPS-R pictogram provided. However, after matching the FPS-R scores with the observer scores, only 164 out of 240 datasets remained. Analyzing this subset would have been very interesting, but the study was not designed to include enough participants to adequately power such an analysis. 
 
-Regarding our secondary objective, which is to identify the relationship between age and randomization (study and control) groups on the FPS-R Score, we conclude that age significantly affects the FPS-R Score. It emphasizes the significance of taking pediatric patients’ age into account during the anesthesia procedure of IV insertions. Ametop together with vapocoolant spray is more effective in reducing discomfort for younger children and might not be necessary for children age 15 and above. A limitation observed in this regression method is that the data do not appear to be exactly normally distributed, as indicated by the QQ plot, which shows a heavy-tailed distribution. However, since the group is focusing on inference rather than prediction, and considering the Central Limit Theorem (CLT) assumption, we proceeded with the use of linear regression for our analysis.
+Regarding our secondary objective, which is to identify the relationship between age and randomization (study and control) groups on the FPS-R scores, we conclude that age significantly affects the FPS-R scores. This emphasizes the importance of considering pediatric patients’ age during the anesthesia procedure of IV insertions. The combination of Ametop and vapocoolant spray is more effective in reducing discomfort for younger children and might not be necessary for children aged 15 and above. A limitation observed in this regression method is that the data do not appear to be exactly normally distributed, as indicated by the QQ plot, which shows a heavy-tailed distribution. However, since the focus is on inference rather than prediction, and considering the Central Limit Theorem (CLT) assumption, we proceeded with the use of linear regression for our analysis.
 
 Additionally, the advantages of incorporating vapocoolant spray alongside Ametop are supported by the evidence which indicates that the use of vapocoolant spray in conjunction with Ametop does not lead to an increase in the number of IV attempts. This conclusion is drawn from the observation of similar distributions and a slightly lower mean number of IV attempts in the study group compared to the control group. Consequently, the anesthetist department may use the combination of Ametop and vapocoolant spray without the concern of increasing the number of IV attempts.
 
 In the analysis of the side effects of Ametop, 95% of the patients experience no side effects. Among the 5% that do report side effects, the most common side effect reported for patients was redness, either alone or accompanied by itching.
 
-In conclusion, the combination of Ametop gel and vapocoolant spray is beneficial for pediatric patients during IV insertions. The combination of Ametop and vapocoolant spray significantly reduces discomfort in pediatric patients, particularly for younger children. Furthermore, the addition of spray also did not increase the number of IV attempts. However, older children, aged 15 and above, may not require the addition of vapocoolant spray. Currently, 5% of patients experience side effects, which may indicate the need for another medical procedure for some individuals. 
+In conclusion, combining Ametop gel and vapocoolant spray benefits pediatric patients during IV insertions. The combination of Ametop and vapocoolant spray significantly reduces discomfort in pediatric patients, particularly for younger children. Furthermore, the addition of spray also did not increase the number of IV attempts. However, older children, aged 15 and above, may not require the addition of vapocoolant spray. Currently, 5% of patients experience side effects, which may indicate the need for another medical procedure for some individuals.
 
 \newpage
 
